[workspace]
resolver = "2"
members = ["mesh_to_sdf", "mesh_to_sdf_client"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.2.1"


[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.lints.rust]
dead_code = "allow"
missing_docs = "warn"
unexpected_cfgs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
complexity = {level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

significant_drop_tightening = "allow"
module_name_repetitions = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# From restriction
same_name_method = "allow" # because of rust embed, see https://github.com/pyrossh/rust-embed/issues/204
std_instead_of_core = "warn"
clone_on_ref_ptr = "warn"
renamed_function_params = "warn"
#unseparated_literal_suffix = "warn"
redundant_type_annotations = "warn"
partial_pub_fields = "warn"
let_underscore_untyped = "warn"
let_underscore_must_use = "warn"
ref_patterns = "warn"
undocumented_unsafe_blocks = "warn"
wildcard_enum_match_arm = "warn"
suboptimal_flops = "allow"
