[package]
name = "mesh_to_sdf"
version = "0.2.1"
description = "Mesh to signed distance field (SDF) converter"
edition = "2021"
license = "MIT OR Apache-2.0"

authors = ["Etienne Desbois <e.desbois@hotmail.fr>"]
homepage = "https://github.com/Azkellas/mesh_to_sdf"
repository = "https://github.com/Azkellas/mesh_to_sdf"
keywords = ["mesh", "sdf", "distance_field", "raymarching", "voxels"]
categories = ["algorithms", "rendering::data-formats", "game-development", "graphics", "data-structures"]

exclude = [
    "assets/*",
    "ARCHITECTURE.md",
]

[dependencies]
float-cmp = "0.9.0"
itertools = "0.12.1"
log = "0.4.20"
ordered-float = "4.2.0"
rayon = "1.9.0"

glam = { version = "0.25.0", optional = true }
mint = { version = "0.5.9", optional = true }
nalgebra = { version = "0.32.4", optional = true }
cgmath = { version = "0.18.0", optional = true }

[features]
glam = ["dep:glam"]
mint = ["dep:mint"]
nalgebra = ["dep:nalgebra"]
cgmath = ["dep:cgmath"]

[dev-dependencies]
easy-gltf = "1.1.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.4.0"
env_logger = "0.11.2"

[[bench]]
name = "generate_sdf"
harness = false

[[bench]]
name = "generate_grid_sdf"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
