[package]
name = "mesh_to_sdf"
version = "0.3.0"
description = "Mesh to signed distance field (SDF) converter"
edition = "2021"
license = "MIT OR Apache-2.0"

authors = ["Etienne Desbois <e.desbois@hotmail.fr>"]
homepage = "https://github.com/Azkellas/mesh_to_sdf"
repository = "https://github.com/Azkellas/mesh_to_sdf"
keywords = ["mesh", "sdf", "distance_field", "raymarching", "voxels"]
categories = [
    "algorithms",
    "rendering::data-formats",
    "game-development",
    "graphics",
    "data-structures",
]

exclude = ["assets/*", "ARCHITECTURE.md"]

[dependencies]
float-cmp = "0.9.0"
itertools = "0.13.0"
log = "0.4.22"
ordered-float = "4.2.2"
rayon = "1.10.0"
bvh = "0.10.0"

glam = { version = "0.29.0", optional = true }
mint = { version = "0.5.9", optional = true }
cgmath = { version = "0.18.0", optional = true }
nalgebra = "0.33.0"                              # required for bvh.

serde = { version = "1.0.210", features = ["derive"], optional = true }
rmp-serde = { version = "1.3.0", optional = true }
parking_lot = "0.12.3"
smallvec = "1.13.2"
web-time = "1.1.0"

[features]
cgmath = ["dep:cgmath"]
glam = ["dep:glam"]
mint = ["dep:mint"]
serde = [
    "dep:serde",
    "dep:rmp-serde",
    "glam?/serde",
    "mint?/serde",
    "nalgebra/serde-serialize",
    "cgmath?/serde",
]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
easy-gltf = "1.1.2"
env_logger = "0.11.5"
proptest = "1.5.0"
tempfile = "3.12.0"

[[bench]]
name = "generate_sdf"
harness = false

[[bench]]
name = "generate_grid_sdf"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
