[package]
name = "mesh_to_sdf_client"
authors = ["Etienne Desbois <e.desbois@hotmail.fr>"]
version = "0.2.1"
edition = "2021"
homepage = "https://github.com/Azkellas/mesh_to_sdf"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Azkellas/mesh_to_sdf"
description = "A mesh to SDF converter and renderer"
keywords = ["mesh", "sdf", "distance_field", "raymarching", "voxels"]
categories = [
    "algorithms",
    "rendering::data-formats",
    "game-development",
    "graphics",
    "data-structures",
]

exclude = ["assets/*", "ARCHITECTURE.md"]

[dependencies]
mesh_to_sdf = { path = "../mesh_to_sdf", version = "0.2.1", features = [
    "glam",
] }
egui = "0.27.2"
egui-gizmo = "0.16.2"
wgpu = { version = "0.19.3", default-features = false }
winit_input_helper = "0.16.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
web-time = "1.1.0"
itertools = "0.12.1"
anyhow = "1.0.81"
winit = "0.29.15"
glam = { version = "0.27.0", default-features = true, features = [
    "bytemuck",
    "mint",
] }
easy-gltf = { version = "1.1.1", default-features = true, features = ["names"] }
image = "0.25.1"
pollster = "0.3.0"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"
log = "0.4.21"
env_logger = "0.11.3"
cfg-if = "1.0.0"
float-cmp = "0.9.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Enable shader hot reload for native compilation.
rust-embed = "8.3.0"
notify = "6.1.1"

[target.'cfg(target_family = "wasm")'.dependencies]
# Embed shaders in wasm even in debug mode.
rust-embed = { version = "8.2.0", features = ["debug-embed"] }
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.92"

[target.'cfg(target_env = "musl")'.dependencies]
rfd = { version = "0.14.1", default-features = false, features = [
    "async-std",
    "xdg-portal",
    "file-handle-inner",
] }

[target.'cfg(not(target_env = "musl"))'.dependencies]
rfd = { version = "0.14.1", default-features = true, features = [
    "file-handle-inner",
] }

[features]
# wgpu::DownlevelFlags::VERTEX_STORAGE is not supported on WebGL
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/wgsl"]
default = ["webgpu"]

[lints]
workspace = true
